--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^2.9.4",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
